# lip_slave_service

./: .gitignore  CMakeLists.txt  README.md  main.cpp  url.txt
ai_model/: config.ini
base/: cmake_install.cmake
base/i18n/: cmake_install.cmake
det_lip/: CMakeLists.txt  face_boxes.cpp  face_boxes.hpp  face_landmark.cpp  face_landmark.hpp  face_mode.cpp  face_mode.hpp  factory.cpp  factory.hpp  gen_mouth.cpp  gen_mouth.hpp  gen_proj_bfm.cpp  gen_proj_bfm.hpp  request.cpp  request.hpp  stage.cpp  stage.hpp  test.cpp
det_lip/lip/: gen_file_list.py
det_lip/lip/include/: det_face_boxes.hpp  det_landmark_tf.hpp  gen_face_mode.hpp  gen_mouth_gan.hpp  gen_proj_bfm.hpp
det_lip/lip/libs/linux/gpu/: libdet_face_boxes.so.18.100.1.0.1.4  libgen_deep_speech.so.18.100.1.0.0.6  libprotobuf-lite.so.15.0.1  performance_testing_GPU  performance_testing_wavs_GPU
det_lip/lip/model/: config.xml  word_list.txt
det_lip/lip/model/gen_deep_speech/: libpxnn.so.18.100.1.0.0.6
det_lip/lip/model/res/: ali_train_pdf.counts  final.mdl  tree
